[gd_scene load_steps=4 format=3 uid="uid://b53p6e838j8i1"]

[ext_resource type="Script" uid="uid://c0peusj7pdkoo" path="res://editor/scripts/new/enemy_page_container.gd" id="1_7sdkj"]
[ext_resource type="Texture2D" uid="uid://diw1mohtu5gxl" path="res://editor/ui/sprites/space_ships_01.png" id="1_fa5gf"]
[ext_resource type="PackedScene" uid="uid://bu8safbwuv5v1" path="res://editor/scenes/fork_container.tscn" id="2_7sdkj"]

[node name="EnemyPageContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7sdkj")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Pic" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/Pic"]
layout_mode = 2
texture = ExtResource("1_fa5gf")
expand_mode = 2
stretch_mode = 4

[node name="Description" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/Description"]
layout_mode = 2
size_flags_vertical = 4

[node name="BaseHealthLabel" type="Label" parent="PanelContainer/HBoxContainer/Description/VBoxContainer"]
layout_mode = 2
text = "BaseHealthLabel : 10"

[node name="BasePointsLabel" type="Label" parent="PanelContainer/HBoxContainer/Description/VBoxContainer"]
layout_mode = 2
text = "BasePointsLabel : 10"

[node name="BaseSymble" type="Label" parent="PanelContainer/HBoxContainer/Description/VBoxContainer"]
layout_mode = 2
text = "BaseSymble : 0"

[node name="EditControll" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/EditControll"]
layout_mode = 2

[node name="AddNewButton" type="Button" parent="PanelContainer/HBoxContainer/EditControll/VBoxContainer"]
layout_mode = 2
text = "Add fork"

[node name="ForkContainer" parent="." instance=ExtResource("2_7sdkj")]
layout_mode = 2
